# presence

./: pylint.rc  pyproject.toml
apps/web/: index.html
apps/web/src/: App.jsx  main.jsx  utils.jsx
apps/web/src/components/: Ads.jsx  Alternate.jsx  Analytics.jsx  Charts.jsx  Dashboard.jsx  Dropdown.jsx  Entry.jsx  Extras.jsx  Feature.jsx  Footer.jsx  Guests.jsx  Header.jsx  Help.jsx  Home.jsx  Item.jsx  Landing.jsx  ReportsMenu.jsx  Shapes.jsx  Stats.jsx
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/public/: index.html  manifest.json
dashboard/src/: App.jsx  index.js  main.jsx
dashboard/src/app/: App.js  utils.js
dashboard/src/app/components/: Entry.js  Header.js  Login.js
dashboard/src/components/: Entry.jsx  Error.jsx  Header.jsx  Reports.jsx  ReportsMenu.jsx
dashboard/tests/: App.test.js
guests/: admin.py  models.py  urls.py
guests/views/: __init__.py  guests.py  markers.py  teams.py
hosts/: models.py  urls.py  views.py
hosts/migrations/: 0003_alter_cohort_name.py
hosts/views/: __init__.py  cohorts.py  events.py  hosts.py
presence/: asgi.py  settings.py  urls.py  views.py  wsgi.py
service/: pyproject.toml
service/guests/: admin.py  urls.py
service/guests/migrations/: 0001_initial.py  0002_guest_fingerprint_alter_teams_name_marker.py
service/guests/views/: teams.py
service/hosts/: admin.py  urls.py
service/hosts/migrations/: 0001_initial.py  0002_alter_cohort_options_alter_host_options_and_more.py  0004_alter_cohort_name.py
service/hosts/views/: cohorts.py  events.py
(+5 files in other folders)
