[tool.poetry]
name = "presence"
version = "0.1.0"
description = ""
authors = ["Harish Navnit <harishnavnit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webauthn = "^2.1.0"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
